# aoc2021

./: README.org  flake.nix  pyproject.toml
aoc2021/day_1/: main.org  main.py
aoc2021/day_2/: main.org
aoc2021/day_3/: main.org
aoc2021/day_4/: main.org  part_1.py
tests/: test_day_1.py
tests/day_4/: test_day_4.py
