[tool.poetry]
name = "AOC2021"
version = "0.1.0"
description = ""
authors = ["Edmund Miller <edmund.a.miller@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
